--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -129,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -186,7 +188,23 @@
     }
    ],
    "source": [
-    "plt.show()"
+    "plt.show()\n",
+    "# 0 means neutral, 1 is positive, -1 is negative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# it's a big surprising that there is more positive sentiment than negative.\n",
+    "# but the problem here could the the sentiment analysis being not accurate enough.\n",
+    "# we see a lot of neutral sentiments, which is not the norm when people talk about Trump.\n",
+    "# and the polarity might be mis-clarified too.\n",
+    "# it's would be chanllendge as how to correctly do the sentiment analysis. "
    ]
   }
  ],
