--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -8,6 +8,10 @@
    },
    "outputs": [],
    "source": [
+    "#part of the code is from Adil Moujahid's blog\n",
+    "# http://adilmoujahid.com/posts/2014/07/twitter-analytics/\n",
+    "\n",
+    "\n",
     "import json\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -200,11 +204,12 @@
    },
    "outputs": [],
    "source": [
-    "# it's a big surprising that there is more positive sentiment than negative.\n",
+    "# it's a big surprising that there is more positive sentiment than negative\n",
+    "# given that twitter use base is considerred more liberal.\n",
     "# but the problem here could the the sentiment analysis being not accurate enough.\n",
     "# we see a lot of neutral sentiments, which is not the norm when people talk about Trump.\n",
     "# and the polarity might be mis-clarified too.\n",
-    "# it's would be chanllendge as how to correctly do the sentiment analysis. "
+    "# it's would be a chanllendge as how to correctly do the sentiment analysis. "
    ]
   }
  ],
